# nrsi

./: .gitignore  BUSINESS_MODEL.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  PATENTS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-cloud-run.yml  event-retention-cleanup.yml  pages.yml
alert-relay/: Dockerfile  app.py
docs/: event-data-governance.md  incident-runbook.md
event-relay/: .env.example  Dockerfile  app.py  requirements.txt
global-rollout/: pyproject.toml  requirements.txt
global-rollout/nrsi/: __init__.py
global-rollout/nrsi/core/: __init__.py  abstraction.py  advanced_renderer.py  affective.py  agi_integration.py  attention.py  audio_engine.py  bdi.py  belief_revision.py  creases.py  creative_vision.py  epistemic.py  errors.py  explanations.py  generative.py  gpu_renderer.py  hierarchy.py  hscore.py  impulse_trust.py  inference_router.py  knowledge.py  lobes.py  media.py  media_verification.py  memory.py  metacognitive.py  mode_control.py  multimodal.py  neural_audio.py  neural_renderer.py  neurons.py  normative.py  nrs.py  parallel.py  plasticity.py  procedural_textures.py  render_engine.py  router.py  scene_planner.py  sdf_primitives.py  (+9 more)
global-rollout/nrsi/core/cognitive_engine/: __init__.py  query_loop.py  reasoning.py  thinking.py  tool_framework.py  verification.py
global-rollout/nrsi/lang/: __init__.py  __main__.py  builtins.py  cli.py  cognitive_primitives.py  formatter.py  lexer.py  lsp.py  parser.py  runtime.py  transpiler.py  type_checker.py
global-rollout/nrsi/lang/targets/: __init__.py  kotlin.py  swift.py
global-rollout/nrsi/stdlib/: __init__.py  abstraction.nrsi  address_revocation.nrsi  affective.nrsi  analogy_engine.nrsi  attention.nrsi  bdi.nrsi  behavioral_attestation.nrsi  beliefs.nrsi  binary_neurons.nrsi  causal_engine.nrsi  client_response_policy.nrsi  code_executor.nrsi  cognitive.nrsi  cognitive_integration.nrsi  cognitive_loop.nrsi  content_safety.nrsi  context.nrsi  creases.nrsi  credit_store.nrsi  domain_creases.nrsi  emergency.nrsi  epistemic.nrsi  explanations.nrsi  gates.nrsi  generative_engine.nrsi  hardware_determinism.nrsi  hierarchy.nrsi  impulse_trust.nrsi  integrity_gates.nrsi  ip_credit_score.nrsi  ipv6_addressing.nrsi  ironclad_session.nrsi  knowledge.nrsi  knowledge_loader.nrsi  learning_engine.nrsi  lobes.nrsi  logic_engine.nrsi  media_pipeline.nrsi  metacognition.nrsi  (+85 more)
global-rollout/nrsi/stdlib/knowledge/: finance_core.json  finance_regulations.json  healthcare_core.json  healthcare_standards.json  legal_core.json  nrs_architecture_decisions.json  nrs_bug_patterns.json  nrs_interop_rules.json  telecom_bands.json  telecom_core.json  telecom_signaling.json
global-rollout/sdks/go/: README.md  atherion.go  go.mod
global-rollout/sdks/rust/: Cargo.toml  README.md
global-rollout/sdks/rust/src/: lib.rs
global-rollout/tests/: benchmark_throughput.py  run_p2p_money_flow.sh  simulate_p2p_money_flow.py  test_agi_engines.py  test_artifact_store.py  test_client_response_policy.py  test_code_intelligence.py  test_cognitive_integration.py  test_cognitive_primitives.py  test_core_subsystems.py  test_determinism_regression.py  test_deterministic_facts.py  test_e2e_flow.py  test_enterprise_services.py  test_ip_credit_score.py  test_language_detector.py  test_mode_system.py  test_neural_audio.py  test_nrsi_agi_integration.py  test_nrsi_integration.py  test_nrsi_lang.py  test_nrsi_targets.py  test_orchestrator.py  test_pqc_keyexchange.py  test_public_api_route_contract.py  test_remaining_modules.py  test_thin_node_contract.py  test_untested_modules.py  test_video_model.py
global-rollout/tests/claude_parity/: __init__.py  audit_default_impulses.py  nrs_advanced_battery.py  nrs_adversarial_battery.py  nrs_autonomous_probe.py  nrs_extended_battery.py  nrs_human_layer_probe.py  nrs_mode_probe.py  nrs_multiturn_battery.py  nrs_parity_battery.py  nrs_stretch_battery.py  run_all.py
global-rollout/tests/load/: locust.conf
global-rollout/tools/nrsi-lang/: DEVELOP.md  README.md  pyproject.toml
global-rollout/tools/nrsi-lang/src/nrsi/: __init__.py
global-rollout/tools/nrsi-lang/tests/: test_lexer.py  test_parser.py  test_transpiler.py
scripts/: configure_event_relay_bigquery.sh  deploy_event_relay.sh  deploy_gcp.sh  deploy_resend_alert_relay.sh  process_event_deletion_requests.sh  setup_event_relay_dashboard.sh  setup_event_relay_service_account.sh  setup_github_wif.sh  setup_monitoring_alerts.sh  setup_monitoring_resend_channel.sh
web-next/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json
web-next/app/: globals.css  layout.jsx
web-next/app/(api)/api/_lib/: providers.js  rbac.js  security.js  session.js  validation.js
web-next/app/(api)/api/analytics/: route.js
web-next/app/(api)/api/auth/session/: route.js
web-next/app/(api)/api/launch-interest/: route.js
web-next/app/(auth)/admin/: page.jsx  page.tsx
web-next/app/(auth)/dashboard/: page.jsx  page.tsx
web-next/app/(auth)/login/: page.jsx  page.tsx
web-next/app/(public)/: layout.jsx
web-next/app/(public)/aeo/: page.jsx
web-next/app/(public)/contact/: page.jsx
web-next/app/(public)/developers/: page.jsx
web-next/app/(public)/enterprise/: page.jsx
web-next/app/(public)/platform/: page.jsx
web-next/app/(public)/pricing/: page.jsx
web-next/components/: AuthGate.jsx  AuthGate.tsx  RouteStage.jsx  ScrollRevealInit.jsx  SiteFooter.jsx  SiteHeader.jsx  ThemeSync.jsx  ThreeHero.jsx
web-next/public/: nrsi-ghost-in-the-machine.html
web-next/scripts/: check-bundle-budget.mjs
website/: CNAME  DEPLOYMENT.md  Dockerfile  admin.html  aeo.html  auth-config.js  contact.html  dashboard.html  developers.html  docker-entrypoint.sh  enterprise.html  index.html  llms.txt  login.html  nginx.conf.template  platform.html  pricing.html  robots.txt  site.js  sitemap.xml  styles.css
