[package]
name = "atherion-nrs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Official Rust client for the Atherion NRS Platform HTTP API"
homepage = "https://atheriongroup.com"
repository = "https://github.com/atherion-group/atherion-nrs-rust"
readme = "README.md"
keywords = ["ai", "nrs", "atherion", "llm", "neuromorphic"]
categories = ["api-bindings", "science"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3"
thiserror = "1"
bytes = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
