[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nrsi-lang"
version = "0.1.0"
description = "NRSI — The programming language for neuromorphic AI validation"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
authors = [
    {name = "VelarIQ", email = "dev@velariq.ai"}
]
keywords = ["nrsi", "language", "transpiler", "neuromorphic", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]

[project.scripts]
nrsic = "nrsi.lang.cli:main"
nrsi = "nrsi.lang.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
